--- a/Frontend/citizenconnect360/src/app/government-dashboard/government-dashboard.component.css
+++ b/Frontend/citizenconnect360/src/app/government-dashboard/government-dashboard.component.css
@@ -3,29 +3,39 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  /* min-height: 85vh; Full viewport height */
   position: relative; /* Ensure relative positioning for children */
   height: 100vh;
   background-color: rgba(54, 245, 54, 0.1);
 }
 
 .background-image {
-  margin-left: 400px;
   position: absolute;
   top: 0;
   left: 0;
-  width: 50%;
+  width: 60%;
   height: 100%;
-  background-image: url('https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQjxWpHjCbrLO9F6jDFMKvPGQ3VyAMPG2ofXQ&s');
+  background-image: url("https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQjxWpHjCbrLO9F6jDFMKvPGQ3VyAMPG2ofXQ&s");
   background-size: cover;
   background-position: center;
   /* filter: blur(1px); Optional: add a slight blur effect for better readability of content */
   z-index: -1;
-  opacity: 2;  
+  opacity: 2;
+  transform: translateX(30%);
+  /* position: absolute;
+  top: 0;
+  left: 50%;
+  transform: translateX(-50%);
+  width: 100%;
+  height: 100%;
+  background-image: url('https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQjxWpHjCbrLO9F6jDFMKvPGQ3VyAMPG2ofXQ&s');
+  background-size: cover;
+  background-position: center;
+  z-index: -1;
+  opacity: 2; */
 }
 
 .content {
-  background-color: #CCE6F4; /* Semi-transparent white background for content */
+  background-color: #cce6f4; /* Light blue background for content */
   padding: 20px;
   border-radius: 10px;
   max-width: 800px;
@@ -47,6 +57,12 @@
   .content {
     padding: 15px;
   }
+
+  .background-image {
+    left: 50%;
+    width: 100%;
+    transform: translateX(-50%);
+  }
 }
 
 @media (max-width: 768px) {
@@ -58,5 +74,11 @@
 @media (max-width: 480px) {
   .content {
     max-width: 90%;
+  }
+
+  .background-image {
+    left: 50%;
+    width: 100%;
+    transform: translateX(-50%);
   }
 }
