--- a/Frontend/citizenconnect360/src/app/views/views.component.html
+++ b/Frontend/citizenconnect360/src/app/views/views.component.html
@@ -1,4 +1,28 @@
 <div class="main-container">
+    <div class="views-box" *ngFor="let view of views">
+      <div class="user-info">
+        <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSWwfGUCDwrZZK12xVpCOqngxSpn0BDpq6ewQ&s" alt="Profile Picture" class="profile-picture">
+        <div class="user-details">
+          <p>Username: {{ view.username }}</p>
+          <p>Location: {{ view.location }}</p>
+          <p>Role: {{ view.role }}</p>
+          <p>Created At: {{ view.createdAt | date:'short' }}</p> <!-- Format date -->
+        </div>
+      </div>
+      <div class="user-view">
+        <p>{{ view.content }}</p>
+      </div>
+    </div>
+    <div class="input-container">
+      <label for="view-input">Type your view:</label>
+      <input type="text" id="view-input" class="view-input" [(ngModel)]="newView">
+      <button class="submit-button" (click)="addView()">Submit</button>
+    </div>
+  </div>
+  
+
+
+<!-- <div class="main-container">
     
 
   <div class="views-box" *ngFor="let view of views">
@@ -20,4 +44,4 @@
     <button class="submit-button" (click)="addView()">Submit</button>
 </div>
   
-</div>
+</div> -->
