--- a/Frontend/citizenconnect360/src/app/polls/polls.component.css
+++ b/Frontend/citizenconnect360/src/app/polls/polls.component.css
@@ -48,11 +48,19 @@
   .poll-option input {
     margin-right: 10px;
   }
-  
   .progress-bar {
     height: 10px;
     border-radius: 5px;
     margin-top: 5px;
-    transition: width 0.3s;
+    background-color: #007bff; /* Default color */
+    transition: width 0.3s ease;
   }
+  
+  
+  /* .progress-bar {
+    height: 10px;
+    border-radius: 5px;
+    margin-top: 5px;
+    transition: width 0.3s;
+  } */
   
